add link to schedule at a glance, correct registration time for july 9th

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1447,6 +1447,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-10 col-md-offset-1 text-center">
+              <a name="schedule-at-a-glance"></a>
               <h1>Schedule of Events</h1>
               <br />
               <h3>Tuesday, July 7th, 2015</h3>
