--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -46,6 +46,7 @@
 			<li><a href="/schedule/8july">July 8th Day 1</a></li>
 			<li><a href="/schedule/9july">July 9th Day 2</a></li>
 			<li><a href="/schedule/july10">July 10th Hack Day</a></li>
+			<li><a href="#schedule-at-a-glance">Schedule At A Glance</a></li>
           </ul>
         </li>
         <li class="dropdown">
