--- a/themes/gophercon/layouts/section/schedule.html
+++ b/themes/gophercon/layouts/section/schedule.html
@@ -6,8 +6,7 @@
         <div class="col-md-8">
           <h2>{{ .Title }}</h2>
           {{ range (.Data.Pages).Reverse }}
-            <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
-            <small>{{ dateFormat "Monday, Jan 2, 2006" .Date }}</small><br/><br/>
+            <h3><a href="{{ .RelPermalink }}">{{ dateFormat "Monday, Jan 2, 2006" .Date }}</a></h3>
             {{ .Summary }}
             {{ if .Truncated }} <br/><br/>
             <a class="readmore" href="{{ .RelPermalink }}">Read More <i class="fa fa-arrow-circle-right"></i></a>
@@ -15,7 +14,6 @@
           {{ end }}
         </div>
 
-        {{ partial "sidebar.html" . }}
     </section>
 </main>
 <main>
