--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -46,7 +46,7 @@
 			<li><a href="/schedule/7july">July 7th Workshops</a></li>
 			<li><a href="/schedule/8july">July 8th Day 1</a></li>
 			<li><a href="/schedule/9july">July 9th Day 2</a></li>
-			<li><a href="/schedule/july10">July 10th Hack Day</a></li>
+			<li><a href="/schedule/10july">July 10th Hack Day</a></li>
           </ul>
         </li>
         <li class="dropdown">
