--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1574,7 +1574,7 @@
                 </tr>
                 <tr>
                   <td><strong>10:00 a.m. – 5:00 p.m.</strong></td>
-                  <td>Google, Room 406</td>
+                  <td>Google Cloud Platform, Room 406</td>
                 </tr>
                 <tr>
                   <td><strong>10:00 a.m. – 5:00 p.m.</strong></td>
