Update Blake Caldwell's employer to Kentik

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -426,7 +426,7 @@
                   <h4>
                     <a href="/speakers/blake-caldwell">Blake Caldwell</a>
                   </h4>
-                  <span class="title">Developer, CloudHelix, Inc.</span>
+                  <span class="title">Developer, Kentik</span>
                   <div class="handle"></div>
                 </div>
               </div>
@@ -1156,7 +1156,7 @@
                           <span class="name">
                             <a href="/speakers/blake-caldwell">Blake Caldwell</a>
                           </span>
-                          <span class="designation">Developer, Fog Creek Software</span>
+                          <span class="designation">Developer, Kentik</span>
                         </div>
                       </div>
                       <div class="abstract">
