add social icons to speakers page

--- a/themes/gophercon/layouts/section/speakers.html
+++ b/themes/gophercon/layouts/section/speakers.html
@@ -2,19 +2,30 @@
 
 
 <main class="container generic">
-    <section class="row"> 
+    <section class="row">
         <div class="col-md-8">
           <h2>2015 Speakers</h2>
           {{ range .Data.Pages }}
             <div class="row">
               <div class="col-md-3">
                 <img class="avatar img-rounded" src="{{.Params.speakerimage}}" alt="{{.LinkTitle}}" width="150" />
+                <div class="speaker-social">
+                  {{ with .Params.twitter }}
+                  <a href="{{.}}"><i class="fa fa-twitter"></i></a>
+                  {{ end }}
+                  {{ with .Params.github }}
+                  <a href="{{.}}"><i class="fa fa-github"></i></a>
+                  {{ end }}
+                  {{ with .Params.linkedin }}
+                  <a href="{{.}}"><i class="fa fa-linkedin"></i></a>
+                  {{ end }}
+                </div>
               </div>
               <div class="col-md-9">
-                <h3>{{.LinkTitle}} <br /><small>{{.Params.speakertitle}}</small></h3>          
+                <h3>{{.LinkTitle}} <br /><small>{{.Params.speakertitle}}</small></h3>
                 {{.Summary}}
                 <br/><br/>
-                {{ if .Truncated }} 
+                {{ if .Truncated }}
                 <a class="readmore" href="{{ .RelPermalink }}">Read More <i class="fa fa-arrow-circle-right"></i></a>
                 {{ end }}
                 <a href="{{ .Params.talk}}">View Talk</a><br/><br />
