Fix misspelled twitter account of Andrew Gerrand

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -209,7 +209,7 @@
               <div class="caption">
                 <h4>
                   <div class="handle">
-                    <a href="http://twitter.com/ennef"><i class="fa fa-twitter"></i></a>
+                    <a href="http://twitter.com/enneff"><i class="fa fa-twitter"></i></a>
                   </div>
                   <a href="/speakers/andrew-gerrand">Andrew Gerrand</a>
                 </h4>
