update Derek Parker employer

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -258,8 +258,7 @@
                   <h4>
                     <a href="/speakers/derek-parker">Derek Parker</a>
                   </h4>
-                  <span class="title">Author of
-                    <a href="https://github.com/derekparker/delve">Delve</a>an open source debugger for Go</span>
+                  <span class="title">Engineer at Hashrocket</span>
                   <div class="handle"></div>
                 </div>
               </div>
@@ -734,6 +733,7 @@
                           <span class="name">
                             <a href="/speakers/derek-parker">Derek Parker</a>
                           </span>
+                          <span class="designation">Engineer at Hashrocket</span>
                         </div>
                       </div>
                       <div class="abstract">
