minor tweak to working

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -62,7 +62,7 @@
                         });
                 </script>
       </div>
-      <h3>Early bird tickets available on 1st January 2016.</h3>
+      <h3>Early bird tickets available 1st January 2016.</h3>
 
 <div class="push"></div>
 </div><!-- wrapper -->
