more arsing around with styling the input box

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -79,7 +79,7 @@
 #mc_embed_signup .clear {clear:none; display:inline;}
 
 #mc_embed_signup label {display:block; font-size:16px; padding-bottom:10px; font-weight:bold;}
-#mc_embed_signup input.email {display:block; font-size:20px;padding:8px 0; margin:0 auto; text-indent:5px; width:58%; min-width:130px;}
+#mc_embed_signup input.email {display:block; font-size:20px;padding:8px 0; margin:0 auto; text-indent:5px; min-width: 70%;max-width:90%;}
 #mc_embed_signup input.button {display:block; width:35%; margin:10px auto; min-width:90px;}
 
 #mc_embed_signup div#mce-responses {float:left; top:-1.4em; padding:0em .5em 0em .5em; overflow:hidden; width:90%;margin: 0 5%; clear: both;}
