--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -5,8 +5,8 @@
 <title>GopherCon 2016 Denver,CO</title>
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/animate.css">
-<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<link type="text/css" rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 </head>
 
