--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -9,7 +9,7 @@
         <link href="2016/css/lightbox.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="2016/css/theme-gophercon.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="2016/font/styles.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
     </head>
     <body>
     	<div class="loader">
@@ -213,7 +213,7 @@
         </footer>
       </div>
 				
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
       <script src="2016/js/bootstrap.min.js"></script>
       <script src="2016/js/skrollr.min.js"></script>
       <script src="2016/js/lightbox.min.js"></script>
