we love digital ocean

--- a/themes/gophercon/layouts/partials/footer.html
+++ b/themes/gophercon/layouts/partials/footer.html
@@ -13,7 +13,8 @@
               and copyrighted under the
               <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
             </p>
-            <p>Powered by <a href="http://gohugo.io">Hugo</a>.</p>
+	    <p>Powered by <a href="http://gohugo.io">Hugo</a>.</p>
+	    <p>Hosting provided by <a href="http://digitalocean.com"><img src="/img/dohost.png" /></a>.</p>
           </div>
       </div>
     </div>
