--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -205,7 +205,7 @@
                   <li><a href="https://gopheracademy.com/about/">About</a></li>
                   <li><a href="mailto:gophercon@gopheracademy.com">Contact</a></li>
 		  <li><a class="inner-link back-to-top" href="#top">Back To Top&nbsp;<i class="icon pe-7s-angle-up-circle"></i></a></li>
-		  <li><a href="https://www.digitalocean.com/"><img src="/img/dohost.png" /></a></li>
+		  <li><a href="https://www.digitalocean.com/"><img height=39 width=140 src="/img/dohost.png" /></a></li>
                 </ul>
               </div>
       
