--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -126,9 +126,9 @@
                   <img src="2016/img/gallery/Gophercon-still-014.jpg" style="opacity: 0;">
                 </a>
               </li>
-              <li style="background: url(&quot;2016/img/gallery/Gophercon-still-008.jpg&quot;) 50% 0%;">
-                <a href="2016/img/gallery/Gophercon-still-008.jpg" data-lightbox="true" data-title="GopherCon 2015">
-                  <img src="2016/img/gallery/Gophercon-still-008.jpg" style="opacity: 0;">
+              <li style="background: url(&quot;2016/img/gallery/image_1.jpeg&quot;) 50% 0%;">
+                <a href="2016/img/gallery/image_1.jpeg" data-lightbox="true" data-title="GopherCon 2015">
+                  <img src="2016/img/gallery/image_1.jpeg" style="opacity: 0;">
                 </a>
               </li>
               <li style="background: url(&quot;2016/img/gallery/Gophercon-still-011.jpg&quot;) 50% 0%;">
@@ -151,9 +151,9 @@
                   <img src="2016/img/gallery/Gophercon-still-018.jpg" style="opacity: 0;">
                 </a>
               </li>
-              <li style="background: url(&quot;2016/img/gallery/Gophercon-still-039.jpg&quot;) 50% 0%;">
-                <a href="2016/img/gallery/Gophercon-still-039.jpg" data-lightbox="true" data-title="GopherCon 2015">
-                  <img src="2016/img/gallery/Gophercon-still-039.jpg" style="opacity: 0;">
+              <li style="background: url(&quot;2016/img/gallery/image_3.jpeg&quot;) 50% 0%;">
+                <a href="2016/img/gallery/image_3.jpeg" data-lightbox="true" data-title="GopherCon 2015">
+                  <img src="2016/img/gallery/image_3.jpeg" style="opacity: 0;">
                 </a>
               </li>
               <li style="background: url(&quot;2016/img/gallery/Gophercon-still-041.jpg&quot;) 50% 0%;">
@@ -161,9 +161,9 @@
                   <img src="2016/img/gallery/Gophercon-still-041.jpg" style="opacity: 0;">
                 </a>
               </li>
-              <li style="background: url(&quot;2016/img/gallery/Gophercon-still-043.jpg&quot;) 50% 0%;">
-                <a href="2016/img/gallery/Gophercon-still-043.jpg" data-lightbox="true" data-title="GopherCon 2015">
-                  <img src="2016/img/gallery/Gophercon-still-043.jpg" style="opacity: 0;">
+              <li style="background: url(&quot;2016/img/gallery/image_2.jpeg&quot;) 50% 0%;">
+                <a href="2016/img/gallery/image_2.jpeg" data-lightbox="true" data-title="GopherCon 2015">
+                  <img src="2016/img/gallery/image_2.jpeg" style="opacity: 0;">
                 </a>
               </li>
               <li style="background: url(&quot;2016/img/gallery/Gophercon-still-005.jpg&quot;) 50% 0%;">
