add hotel accomodations

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -185,6 +185,67 @@
             </div><!--end of row-->
           </div><!--end of container-->
         </section>
+        <section class="duplicatable-content visitor-info">
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12">
+								<h1>Hotel Accomodations</h1>
+							</div>
+						</div>
+				
+						<div class="row">
+							<div class="col-md-4 col-sm-6">
+								<div class="info-box">
+                  <div class="hotel-price"><strong>$175</strong><small> / night, plus tax</small></div>
+									<img alt="Hampton Inn" src="2016/img/hotels/hampton.jpg">
+                  
+									<h3>Hampton Inn<span class="hotel-phone">800.445.8667</span></h3>
+                  <div class="hotel-code">Code: GopherCon</div>
+                  <p>
+                    550 15th Street,<br>
+                    Denver, CO 80202
+                  </p>
+
+									<div class="hotel-link text-link">
+                    <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/D/DENCVHX-GOP-20160707/index.jhtml">Book Now</a>
+                  </div>
+								</div>
+							</div>
+					
+							<div class="col-md-4 col-sm-6">
+								<div class="info-box">
+                  <div class="hotel-price"><strong>$185</strong><small> / night, plus tax</small></div>
+									<img alt="Homewood Suites" src="2016/img/hotels/homewood.jpg">
+									<h3>Homewood Suites<span class="hotel-phone">800.445.8667</span></h3>
+                  <div class="hotel-code">Code: GopherCon</div>
+									<p>
+                    550 15th Street,<br>
+                    Denver, CO 80202
+                  </p>
+									<div class="hotel-link text-link">
+                    <a href="http://homewoodsuites.hilton.com/en/hw/groups/personalized/D/DENDCHW-GOP-20160707/index.jhtml">Book Now</a>
+                  </div>
+								</div>
+							</div>
+					
+							<div class="col-md-4 col-sm-6">
+								<div class="info-box">
+                  <div class="hotel-price"><strong>$189</strong><small> / night, plus tax</small></div>
+									<img alt="Hilton Garden Inn" src="2016/img/hotels/hiltongardeninn.jpg">
+                  <h3>Hilton Garden Inn<span class="hotel-phone">855.215.1283</span></h3>
+                  <div class="hotel-code">Code: GopherCon</div>
+									<p>
+										1400 Welton Street<br>
+                    Denver, CO 80202
+                  </p>
+									<div class="hotel-link text-link">
+                    <a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/D/DENDDGI-GOPHER-20160708/index.jhtml?WT.mc_id=POG">Book Now</a>
+                  </div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
       </div>
       <div class="footer-container">			
         <footer class="short footer">
