add hyatt place to hotel accomodations

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -194,14 +194,14 @@
 						</div>
 				
 						<div class="row">
-							<div class="col-md-4 col-sm-6">
+							<div class="col-md-3 col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$175</strong><small> / night, plus tax</small></div>
 									<img alt="Hampton Inn" src="2016/img/hotels/hampton.jpg">
                   
-									<h3>Hampton Inn<span class="hotel-phone">800.445.8667</span></h3>
+									<h3 class="hotel-name">Hampton Inn<span class="hotel-phone">800.445.8667</span></h3>
                   <div class="hotel-code">Code: GopherCon</div>
-                  <p>
+                  <p class="hotel-address">
                     550 15th Street,<br>
                     Denver, CO 80202
                   </p>
@@ -212,13 +212,13 @@
 								</div>
 							</div>
 					
-							<div class="col-md-4 col-sm-6">
+							<div class="col-md-3 col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$185</strong><small> / night, plus tax</small></div>
 									<img alt="Homewood Suites" src="2016/img/hotels/homewood.jpg">
-									<h3>Homewood Suites<span class="hotel-phone">800.445.8667</span></h3>
+									<h3 class="hotel-name">Homewood Suites<span class="hotel-phone">800.445.8667</span></h3>
                   <div class="hotel-code">Code: GopherCon</div>
-									<p>
+									<p class="hotel-address">
                     550 15th Street,<br>
                     Denver, CO 80202
                   </p>
@@ -228,13 +228,29 @@
 								</div>
 							</div>
 					
-							<div class="col-md-4 col-sm-6">
+							<div class="col-md-3 col-sm-6">
+								<div class="info-box">
+                  <div class="hotel-price"><strong>$185</strong><small> / night, plus tax</small></div>
+									<img alt="Hyatt Place" src="2016/img/hotels/hyatt.jpg">
+                  <h3 class="hotel-name">Hyatt Place<span class="hotel-phone">888.591.1234</span></h3>
+                  <div class="hotel-code">Code: G-GO16</div>
+									<p class="hotel-address">
+										440 14th Street<br>
+                    Denver, CO 80202
+                  </p>
+									<div class="hotel-link text-link">
+                    <a href="http://denverdowntown.place.hyatt.com/en/hotel/home.html?corp_id=G-GO16">Book Now</a>
+                  </div>
+								</div>
+							</div>
+
+							<div class="col-md-3 col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$189</strong><small> / night, plus tax</small></div>
 									<img alt="Hilton Garden Inn" src="2016/img/hotels/hiltongardeninn.jpg">
-                  <h3>Hilton Garden Inn<span class="hotel-phone">855.215.1283</span></h3>
+                  <h3 class="hotel-name">Hilton Garden Inn<span class="hotel-phone">855.215.1283</span></h3>
                   <div class="hotel-code">Code: GopherCon</div>
-									<p>
+									<p class="hotel-address">
 										1400 Welton Street<br>
                     Denver, CO 80202
                   </p>
