Responsive styles for gopher con 2016, Also added the new logo and edited the colors

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -10,7 +10,8 @@
         <link href="2016/css/theme-gophercon.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="2016/font/styles.css" rel="stylesheet" type="text/css" media="all"/>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
-    </head>
+    	<link href='https://fonts.googleapis.com/css?family=Bitter:400,400italic,700' rel='stylesheet' type='text/css'>
+	</head>
     <body>
     	<div class="loader">
     		<div class="strip-holder">
@@ -26,12 +27,10 @@
       <div class="nav-container"></div>
       <div class="main-container">
         <div class="row colors">
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
         </div>
         <section class="hero-slider">
           <ul class="slides">
@@ -50,7 +49,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-                    <img alt="logo" class="logo" src="2016/img/gophercon2016-2.png">
+                    <img alt="logo" class="logo" src="2016/img/gophercon-2016-logo.png">
 									  <span class="uppercase text-white">July 11th to 13th - Denver, Colorado</span>
                     <h1 class="large-h1 text-white">Largest event in the world dedicated to the Go programming language.</h1>
                   </div>
@@ -112,7 +111,7 @@
               
               <div class="col-md-6 col-sm-6 col-md-offset-1">
                 <div class="embedded-video-holder vju">
-                  <iframe width="600" height="370" src="https://www.youtube.com/embed/616jvCSR0cg?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                  <iframe width="100%" height="370" src="https://www.youtube.com/embed/616jvCSR0cg?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                 </div>
               </div>
             </div>
@@ -194,7 +193,7 @@
 						</div>
 				
 						<div class="row">
-							<div class="col-md-3 col-sm-6">
+							<div class="col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$175</strong><small> / night, plus tax</small></div>
 									<img alt="Hampton Inn" src="2016/img/hotels/hampton.jpg">
@@ -212,7 +211,7 @@
 								</div>
 							</div>
 					
-							<div class="col-md-3 col-sm-6">
+							<div class="col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$185</strong><small> / night, plus tax</small></div>
 									<img alt="Homewood Suites" src="2016/img/hotels/homewood.jpg">
@@ -228,7 +227,7 @@
 								</div>
 							</div>
 					
-							<div class="col-md-3 col-sm-6">
+							<div class="col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$185</strong><small> / night, plus tax</small></div>
 									<img alt="Hyatt Place" src="2016/img/hotels/hyatt.jpg">
@@ -244,7 +243,7 @@
 								</div>
 							</div>
 
-							<div class="col-md-3 col-sm-6">
+							<div class="col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$189</strong><small> / night, plus tax</small></div>
 									<img alt="Hilton Garden Inn" src="2016/img/hotels/hiltongardeninn.jpg">
