small fixes for the template

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -21,9 +21,7 @@
     		</div>
     	</div>
 
-    	
     	<a id="top"></a>
-				
       <div class="nav-container"></div>
       <div class="main-container">
         <div class="row colors">
@@ -98,7 +96,7 @@
         <section class="contained-gallery">
           <div class="container">
             <div class="row">
-              <div class="col-md-5 col-sm-6">
+              <div class="col-md-5">
                 <h1>Why attend GopherCon?</h1>
                 
                 <p class="lead">
@@ -109,7 +107,7 @@
                 <a href="/Gophercon2016Prospectus.pdf" class="btn btn-hollow"><i class="icons8-handshake-filled"></i> Sponsor 2016</a>
               </div>
               
-              <div class="col-md-6 col-sm-6 col-md-offset-1">
+              <div class="col-md-6 col-md-offset-1">
                 <div class="embedded-video-holder vju">
                   <iframe width="100%" height="370" src="https://www.youtube.com/embed/616jvCSR0cg?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                 </div>
@@ -175,7 +173,7 @@
           
           <div class="container">
             <div class="row">
-              <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
+              <div class="col-md-8 col-md-offset-2 text-center">
                 <h1 class="text-white large-h1">
                     <img class="icon" src="2016/img/icons/Camera-50.png" width="40" style="margin-right: 5px">
                   Memories from GopherCon 2015</h1>
@@ -275,17 +273,13 @@
                   <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
                 </p>
               </div>
-        
               <div class="col-sm-5 text-right">
                 <ul class="menu">
-                  <li><a href="https://gopheracademy.com/about/">About</a></li>
-                  <li><a href="mailto:gophercon@gopheracademy.com">Contact</a></li>
-		  <li><a class="inner-link back-to-top" href="#top">Back To Top&nbsp;<i class="icon pe-7s-angle-up-circle"></i></a></li>
-		  <!--		  <li><a href="https://www.digitalocean.com/"><img height=39 width=140 src="/img/dohost.png" /></a></li> -->
- 
+                	<li><a href="https://gopheracademy.com/about/">About</a></li>
+                	<li><a href="mailto:gophercon@gopheracademy.com">Contact</a></li>
+		  			<li><a class="inner-link back-to-top" href="#top">Back To Top&nbsp;<i class="icon pe-7s-angle-up-circle"></i></a></li>
                </ul>
               </div>
-      
             </div>
           </div>
         </footer>
